--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-.left-section {
-  border-right: 2px solid #ebe9e9; /* Add a solid border to the right side */
+/* .left-section {
+  border-right: 2px solid #ebe9e9;
 }
 
 .right-section {
-  border-left: 2px solid #ebe9e9; /* Add a solid border to the left side */
-}
+  border-left: 2px solid #ebe9e9; 
+} */
 
 /* Ensure body and html take up the full height of the viewport */
 html, body {
